# md2web

./: .flake8  .gitignore  .pylintrc  LICENSE  README.md  dev-requirements.txt  pyproject.toml  server.py
.github/workflows/: on_commit.yml  python.yml
content/: index.md
content/tests/: index.md
static/: app.css  app.js
static/css/: pygments.css  style.css
templates/: markdown.html
