[tool.poetry]
name = "md2web"
version = "0.1.2"
description = "Markdown viewer, based on Flask and python-markdown."
authors = ["Arisu Wonderland <arisuchr@riseup.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
Markdown = "^3.3.6"
Pygments = "^2.11.2"
markdown-headdown = "^0.1.3"
Flask-Caching = "^1.10.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
