[tool.poetry]
name = "md2web"
version = "0.1.2"
description = "Lightweight Flask server for rendering Markdown files."
authors = ["Arisu Wonderland <arisuchr@riseup.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
markdown = "^3.4.3"
pygments = "^2.15.1"
flask-caching = "^2.0.2"
pymdown-extensions = "^10.0.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "0.17.0"
pylint = "^2.17.4"

[tool.isort]
line_length = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
